--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
   <button id="destroy-btn">Destory</button>
   <button id="eraser-btn">Erase</button>
   <input type="file" accept="image/*" id="file"/>
+  <button id="save">Save Image</button>
   <input type="text" placeholder="Write and then double click" id="text"/>
   <script src="app.js"></script>
 </body>
