--- a/index.html
+++ b/index.html
@@ -8,10 +8,8 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <canvas></canvas>
-  <input id="line-width" type="range" min="1" max="10" value="5" step="0.5"/>
-  <input id="color" type="color" />
-  <div>
+  <div class="color-options">
+    <input type="color" id="color"/>
     <div class="color-option" style="background-color: #55efc4;" data-color="#55efc4"></div>
     <div class="color-option" style="background-color: #81ecec;" data-color="#81ecec"></div>
     <div class="color-option" style="background-color: #74b9ff;" data-color="#74b9ff"></div>
@@ -22,12 +20,19 @@
     <div class="color-option" style="background-color: #636e72;" data-color="#636e72"></div>
     <div class="color-option" style="background-color: #2d3436;" data-color="#2d3436"></div>
   </div>
-  <button id="mode-btn">Fill</button>
-  <button id="destroy-btn">Destory</button>
-  <button id="eraser-btn">Erase</button>
-  <input type="file" accept="image/*" id="file"/>
-  <button id="save">Save Image</button>
-  <input type="text" placeholder="Write and then double click" id="text"/>
+  <canvas></canvas>
+  <div class="btns">
+    <input id="line-width" type="range" min="1" max="10" value="5" step="0.5"/>
+    <button id="mode-btn">🤪 Fill</button>
+    <button id="destroy-btn">🤒 Destory</button>
+    <button id="eraser-btn">🥶 Erase</button>
+    <label for="file">
+      🙃 Add Photo
+      <input type="file" accept="image/*" id="file"/>
+    </label>
+    <input type="text" placeholder="Add text here ..." id="text"/>
+    <button id="save">🤑 Save Image</button>
+  </div>
   <script src="app.js"></script>
 </body>
 </html>
